src/app/styles/components/background/waves.scss
.background-elements {
  svg {
    position: absolute;

    &.wave-1 {
      opacity: 1;
    }

    &.wave-2 {
      opacity: 0.8;
    }

    &.wave-3 {
      opacity: 0.6;
    }

    &.wave-4 {
      opacity: 0.4;
    }

    &.wave-5 {
      opacity: 0.2;
    }
  }
  
  .wave-group-1, .wave-group-2, .wave-group-4, .wave-group-5, .wave-group-6 {
    display: none;
  }

  .wave-group-2, .wave-group-3, .wave-group-4, .wave-group-5, .wave-group-6 {
    position: absolute;
  }

  .wave-group-2, .wave-group-3, .wave-group-4 {
    svg {
      width: 100vw;
      height: auto;
  
      &.wave-2 {
        top: 0.5rem;
      }
  
      &.wave-3 {
        top: 1rem;
      }
  
      &.wave-4 {
        top: 1.5rem;
      }

      &.wave-5 {
        top: 2rem;
      }
    }
  }

  .wave-group-3 {
    top: 80rem;
  }
}

@media (min-width: 720px) {
  .background-elements {
    .wave-group-1, .wave-group-2, .wave-group-4, .wave-group-5, .wave-group-6 {
      display: block;
    }

    :is(.wave-group-1, .wave-group-6) svg {
      width: 50%;
      height: auto;
      
      &.wave-1 {
        top: 2rem;
      }

      &.wave-2 {
        top: 1.5rem;
      }

      &.wave-3 {
        top: 1rem;
      }
  
      &.wave-4 {
        top: 0.5rem;
      }
  
      &.wave-5 {
        top: 0rem;
      }
    }

    .wave-group-2 {
      top: 24.5rem;
    }

    .wave-group-3 {
      top: 85rem;
    }

    .wave-group-4 {
      top: 188rem;

      svg {
        &.wave-1 {
          opacity: 0.75;
        }
    
        &.wave-2 {
          opacity: 0.60;
        }
    
        &.wave-3 {
          opacity: 0.45;
        }
    
        &.wave-4 {
          opacity: 0.30;
        }
    
        &.wave-5 {
          opacity: 0.15;
        }
      }
    }

    .wave-group-5 {
      top: 135rem;
      
      svg {
        &.wave-5 {
          top: 2rem;
        }
  
        &.wave-4 {
          top: 1.5rem;
        }
  
        &.wave-3 {
          top: 1rem;
        }
    
        &.wave-2 {
          top: 0.5rem;
        }
    
        &.wave-1 {
          top: 0rem;
        }
      } 
    }

    :is(.wave-group-5, .wave-group-6) svg {
      width: 50vw;
      height: auto;
    }

    .wave-group-6 {
      top: 157rem;
        svg {
          width: 50vw;
        }
    }
  }
}

@media (min-width: 1024px) {
  .background-elements {
    .wave-group-1 {
      svg {
        width: initial;
      }
    }

    .wave-group-2, .wave-group-3, .wave-group-4, .wave-group-5 {
      svg {
        &.wave-2 {
          top: 0.75rem;
        }
  
        &.wave-3 {
          top: 1.5rem;
        }
  
        &.wave-4 {
          top: 2.25rem;
        }
  
        &.wave-5 {
          top: 3rem;
        }
      }
    }


    .wave-group-2 {
      top: 28rem;
    }

    .wave-group-3 {
      top: 97rem;
    }

    .wave-group-4 {
      top: 195rem;
    }

    .wave-group-5 {
      top: 130rem; 
      
      svg {
        width: 100vw;
      }
    }

    .wave-group-6 {
      display: none;
    }
  }
}

@media (min-width: 1440px) {
  .background-elements {
    .wave-group-3 {
      top: 115rem;
    }

    .wave-group-4 {
      top: 226rem;
    }

    .wave-group-5 {
      top: 153rem;
    }
  }
}

